fixed css files

--- a/pages/html/contact.html
+++ b/pages/html/contact.html
@@ -5,17 +5,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Rockey Burgers</title>
         <link href="../css/rockey_burgers_contact.css" type="text/css" rel="stylesheet">
+        <link href="../css/rockey_burgers_header.css" type="text/css" rel="stylesheet">
     </head>
     <body>
-    <div class="header">
-        <div class="nav">
-            <a href="index.html"><img src="../../images/rockeyburgers01-logo.png" alt="Rockey Burger Logo"></a>
+        <div class="header">
             <div id="myDIV">
-                <button class="btn"><a href="index.html">Home</a></button>
-                <button class="btn"><a href="menu.html">Menu</a></button>
-                <button class="btn active"><a href="contact.html">Contact</a></button>
+                <a href="index.html"><img src="../../images/rockeyburgers01-logo.png" alt="Rockey Burger Logo"></a>
+                <div class="navbox">
+                    <button class="btn active"><a href="index.html">Home</a></button>
+                    <button class="btn"><a href="menu.html">Menu</a></button>
+                    <button class="btn"><a href="contact.html">Contact</a></button>
+                </div>
             </div>
         </div>
-    </div>
     </body>
 </html>
