added a video of burgers

--- a/pages/html/index.html
+++ b/pages/html/index.html
@@ -20,6 +20,12 @@
         </div>
         <div class="main">
             <p>Hello World</p>
+            <div class="video">
+                <video
+                        src="../../video/Pink%20Panther%20-%20%20I%20Would%20like%20to%20buy%20a%20Hamburger.mp4">
+
+                </video>
+            </div>
         </div>
     </body>
 </html>
