Fixed Header layout and Body Layout

--- a/pages/html/index.html
+++ b/pages/html/index.html
@@ -11,20 +11,26 @@
         <div class="header">
                 <div id="myDIV">
                     <a href="index.html"><img src="../../images/rockeyburgers01-logo.png" alt="Rockey Burger Logo"></a>
-                   <div class="navbox">
-                       <button class="btn active"><a href="index.html">Home</a></button>
-                        <button class="btn"><a href="menu.html">Menu</a></button>
-                        <button class="btn"><a href="contact.html">Contact</a></button>
-                   </div>
                 </div>
+               <div class="navbox">
+                   <button class="btn active"><a href="index.html">Home</a></button>
+                    <button class="btn"><a href="menu.html">Menu</a></button>
+                    <button class="btn"><a href="contact.html">Contact</a></button>
+               </div>
         </div>
         <div class="main">
-            <p>Hello World</p>
-            <div class="video">
-                <video
-                        src="../../video/Pink%20Panther%20-%20%20I%20Would%20like%20to%20buy%20a%20Hamburger.mp4">
-
-                </video>
+            <div class="left">
+                <h3> Hello World</h3>
+            </div>
+            <div class="right">
+                <div class="video">
+                    <video width="300px" controls>
+                        <source src="../../video/Pink%20Panther%20-%20%20I%20Would%20like%20to%20buy%20a%20Hamburger.mp4">
+                    </video>
+                </div>
+                <div class="testimonials">
+                    <h3>Testimonials</h3>
+                </div>
             </div>
         </div>
     </body>
