Updating index page with fonts and layout

--- a/pages/html/index.html
+++ b/pages/html/index.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Rockey Burgers</title>
+        <link href="https://fonts.googleapis.com/css?family=Merriweather&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.10.2/css/all.css" integrity="sha384-rtJEYb85SiYWgfpCr0jn174XgJTn4rptSOQsMroFBPQSGLdOC5IbubP6lJ35qoM9" crossorigin="anonymous">
         <link href="../css/rockey_burgers_header.css" type="text/css" rel="stylesheet">
         <link href="../css/rockey_burgers_index.css" rel="stylesheet" type="text/css">
     </head>
@@ -20,18 +22,42 @@
         </div>
         <div class="main">
             <div class="left">
-                <h3> Hello World</h3>
+                <h2> About us</h2>
+                <p>Spicy jalapeno bacon ipsum dolor amet andouille nulla in, turkey enim eu voluptate. Pork chop aute ground round ullamco nisi ut. Jowl in meatloaf, et reprehenderit culpa sed ut. Quis lorem eiusmod, pork belly culpa ham ad excepteur ut pork loin laborum adipisicing aliquip. Prosciutto tail deserunt meatloaf duis landjaeger. Venison voluptate bacon picanha ball tip dolor capicola. Short loin cupidatat occaecat chicken prosciutto corned beef tail strip steak spare ribs esse exercitation ad ut lorem.</p>
+                <p>Exercitation excepteur duis eiusmod aute tri-tip ham hock eu pork loin officia incididunt. Deserunt reprehenderit sausage, hamburger shank ullamco esse tail quis ut adipisicing turkey elit short loin buffalo. Chuck doner beef ribs pork chop sint commodo aliquip dolore reprehenderit filet mignon minim id enim bresaola. Picanha tongue minim bacon lorem est shankle swine bresaola sed buffalo nisi sint in. Quis laborum nulla ea. Chicken aliquip consectetur, exercitation dolor kevin capicola eiusmod lorem. Fugiat shankle flank biltong.</p>
+                <h2> Reasons You'll Like us</h2>
+                    <ul>
+                        <li>Never Frozen</li>
+                        <li>Prepared and delivered within 24 hours</li>
+                        <li>Grass Fed</li>
+                        <li>Frankfurter dolore id in filet mignon</li>
+                        <li>shankle swine bresaola sed buffalo</li>
+                        <li> hamburger shank ullamco esse tail </li>
+                    </ul>
+                <p>Short ribs tail consequat lorem duis elit irure ullamco deserunt cupim tongue chuck tri-tip venison. Dolore turkey pork belly exercitation drumstick, pork loin excepteur velit lorem leberkas fatback laboris frankfurter. Consectetur ribeye irure pancetta flank. Consectetur capicola t-bone turkey voluptate in spare ribs in nulla cow. Capicola anim short loin sirloin. In dolore tail irure sunt eu occaecat, tempor velit. Eu corned beef turducken fatback laboris nulla lorem prosciutto sirloin in consectetur flank ea biltong ham.</p>
+                <p>Do ground round in magna capicola drumstick tongue spare ribs shankle picanha pork incididunt. Prosciutto adipisicing consectetur, laborum meatloaf cupim pork shankle alcatra. Est ball tip corned beef, exercitation ham jerky dolore. Chicken doner burgdoggen excepteur, boudin rump exercitation aute. Lorem dolore in chuck kevin cow pork chop ut meatloaf occaecat tempor picanha quis. Ham hock qui ea ham tail, dolor in voluptate eiusmod enim ball tip nisi. Biltong landjaeger quis ground round exercitation short loin velit corned beef cupim sausage tail commodo fatback proident officia.</p>
             </div>
+
             <div class="right">
                 <div class="video">
-                    <video width="300px" controls>
+                    <video controls>
                         <source src="../../video/Pink%20Panther%20-%20%20I%20Would%20like%20to%20buy%20a%20Hamburger.mp4">
                     </video>
                 </div>
                 <div class="testimonials">
                     <h3>Testimonials</h3>
+                    <h4>Dont Just Trust us, Here's what others say about us!</h4>
+                    <p>Jenny</p>
+                    <ul>
+                        <li>Greatest place i've ever eaten</li>
+                    </ul>
+
                 </div>
             </div>
         </div>
     </body>
+    <footer>
+        <img src="../../images/instagram.jpeg">
+        <i class="fab fa-facebook"></i>
+    </footer>
 </html>
