Added a picture of a burger on Index page

--- a/pages/html/index.html
+++ b/pages/html/index.html
@@ -20,6 +20,9 @@
                     <button class="btn"><a href="contact.html">Contact</a></button>
                </div>
         </div>
+        <div class="burgerimg">
+            <h1>Rockey Burger House</h1>
+        </div>
         <div class="main">
             <div class="left">
                 <h2> About us</h2>
@@ -48,16 +51,38 @@
                     <h3>Testimonials</h3>
                     <h4>Dont Just Trust us, Here's what others say about us!</h4>
                     <p>Jenny</p>
+                        <ul>
+                            <li>Greatest place i've ever eaten</li>
+                        </ul>
+                    <p>Bobby</p>
+                        <ul>
+                            <li>Amazzzzzzzing Burgers, and even better their staff!!!</li>
+                        </ul>
+                    <p>Tommy</p>
+                        <ul>
+                            <li>I just wish there was one in my backyard! I would be there every day for lunch and
+                                dinner!</li>
+                        </ul>
+                    <p>Jenny</p>
                     <ul>
                         <li>Greatest place i've ever eaten</li>
                     </ul>
-
+                    <p>Bobby</p>
+                    <ul>
+                        <li>Amazzzzzzzing Burgers, and even better their staff!!!</li>
+                    </ul>
+                    <p>Tommy</p>
+                    <ul>
+                        <li>I just wish there was one in my backyard! I would be there every day for lunch and
+                            dinner!</li>
+                    </ul>
                 </div>
             </div>
         </div>
     </body>
     <footer>
-        <img src="../../images/instagram.jpeg">
-        <i class="fab fa-facebook"></i>
+       <a href="#"><i id="instagram" class="fab fa-instagram"></i></a>
+        <a href="#"><i id="facebook" class="fab fa-facebook"></i></a>
+        <a href="#"><i id="twitter" class="fab fa-twitter"></i></a>
     </footer>
 </html>
