I finished the header and Hero Img but took the body back to the bare bones code to restart

--- a/pages/html/index.html
+++ b/pages/html/index.html
@@ -6,8 +6,8 @@
         <title>Rockey Burgers</title>
         <link href="https://fonts.googleapis.com/css?family=Merriweather&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.10.2/css/all.css" integrity="sha384-rtJEYb85SiYWgfpCr0jn174XgJTn4rptSOQsMroFBPQSGLdOC5IbubP6lJ35qoM9" crossorigin="anonymous">
-        <link href="../css/rockey_burgers_header.css" type="text/css" rel="stylesheet">
         <link href="../css/rockey_burgers_index.css" rel="stylesheet" type="text/css">
+        <link href="../css/rockey_burgers_header&footer.css" type="text/css" rel="stylesheet">
     </head>
     <body>
         <div class="header">
@@ -21,7 +21,6 @@
                </div>
         </div>
         <div class="burgerimg">
-            <h1>Rockey Burger House</h1>
         </div>
         <div class="main">
             <div class="left">
@@ -40,12 +39,10 @@
                 <p>Short ribs tail consequat lorem duis elit irure ullamco deserunt cupim tongue chuck tri-tip venison. Dolore turkey pork belly exercitation drumstick, pork loin excepteur velit lorem leberkas fatback laboris frankfurter. Consectetur ribeye irure pancetta flank. Consectetur capicola t-bone turkey voluptate in spare ribs in nulla cow. Capicola anim short loin sirloin. In dolore tail irure sunt eu occaecat, tempor velit. Eu corned beef turducken fatback laboris nulla lorem prosciutto sirloin in consectetur flank ea biltong ham.</p>
                 <p>Do ground round in magna capicola drumstick tongue spare ribs shankle picanha pork incididunt. Prosciutto adipisicing consectetur, laborum meatloaf cupim pork shankle alcatra. Est ball tip corned beef, exercitation ham jerky dolore. Chicken doner burgdoggen excepteur, boudin rump exercitation aute. Lorem dolore in chuck kevin cow pork chop ut meatloaf occaecat tempor picanha quis. Ham hock qui ea ham tail, dolor in voluptate eiusmod enim ball tip nisi. Biltong landjaeger quis ground round exercitation short loin velit corned beef cupim sausage tail commodo fatback proident officia.</p>
             </div>
-
             <div class="right">
                 <div class="video">
-                    <video controls>
-                        <source src="../../video/Pink%20Panther%20-%20%20I%20Would%20like%20to%20buy%20a%20Hamburger.mp4">
-                    </video>
+                    <iframe width="350" height="250" src="https://www.youtube.com/embed/lz0IT4Uk2xQ" frameborder="0"
+                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div class="testimonials">
                     <h3>Testimonials</h3>
