--- a/pages/html/menu.html
+++ b/pages/html/menu.html
@@ -4,8 +4,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Rockey Burgers</title>
+        <link href="https://fonts.googleapis.com/css?family=Merriweather&display=swap" rel="stylesheet">
         <link href="../css/rockey_burgers_menu.css" type="text/css" rel="stylesheet">
-        <link href="../css/rockey_burgers_header.css" type="text/css" rel="stylesheet">
+        <link href="../css/rockey_burgers_header&footer.css" type="text/css" rel="stylesheet">
     </head>
     <body>
         <div class="header">
@@ -13,9 +14,20 @@
                 <a href="index.html"><img src="../../images/rockeyburgers01-logo.png" alt="Rockey Burger Logo"></a>
             </div>
             <div class="navbox">
-                <button class="btn active"><a href="index.html">Home</a></button>
-                <button class="btn"><a href="menu.html">Menu</a></button>
+                <button class="btn"><a href="index.html">Home</a></button>
+                <button class="btn active"><a href="menu.html">Menu</a></button>
                 <button class="btn"><a href="contact.html">Contact</a></button>
+            </div>
+        </div>
+        <div class="burgerimg">
+            <h1>Rockey Burger House</h1>
+        </div>
+        <div class="menu">
+            <h1>Menu</h1>
+            <div class="burgers">
+                <ul>
+                    <li>Rockey Burger Special</li>
+                </ul>
             </div>
         </div>
     </body>
