--- a/pages/html/contact.html
+++ b/pages/html/contact.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Rockey Burgers</title>
         <link href="../css/rockey_burgers_contact.css" type="text/css" rel="stylesheet">
-        <link href="../css/rockey_burgers_header.css" type="text/css" rel="stylesheet">
+        <link href="../css/rockey_burgers_header&footer.css" type="text/css" rel="stylesheet">
     </head>
     <body>
         <div class="header">
