finished index.html page with finishing css on header and body

--- a/pages/html/index.html
+++ b/pages/html/index.html
@@ -1,32 +1,38 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Rockey Burgers</title>
-        <link href="https://fonts.googleapis.com/css?family=Merriweather&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.10.2/css/all.css" integrity="sha384-rtJEYb85SiYWgfpCr0jn174XgJTn4rptSOQsMroFBPQSGLdOC5IbubP6lJ35qoM9" crossorigin="anonymous">
-        <link href="../css/rockey_burgers_index.css" rel="stylesheet" type="text/css">
-        <link href="../css/rockey_burgers_header&footer.css" type="text/css" rel="stylesheet">
-    </head>
-    <body>
-        <div class="header">
-                <div id="myDIV">
-                    <a href="index.html"><img src="../../images/rockeyburgers01-logo.png" alt="Rockey Burger Logo"></a>
-                </div>
-               <div class="navbox">
-                   <button class="btn active"><a href="index.html">Home</a></button>
-                    <button class="btn"><a href="menu.html">Menu</a></button>
-                    <button class="btn"><a href="contact.html">Contact</a></button>
-               </div>
-        </div>
-        <div class="burgerimg">
-        </div>
-        <div class="main">
-            <div class="left">
-                <h2> About us</h2>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Rockey Burgers</title>
+    <link href="https://fonts.googleapis.com/css?family=Merriweather&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.10.2/css/all.css" integrity="sha384-rtJEYb85SiYWgfpCr0jn174XgJTn4rptSOQsMroFBPQSGLdOC5IbubP6lJ35qoM9" crossorigin="anonymous">
+    <link href="../css/rockey_burgers_index.css" rel="stylesheet" type="text/css">
+    <link href="../css/rockey_burgers_header&footer.css" type="text/css" rel="stylesheet">
+</head>
+<body>
+    <div class="header">
+            <div id="myDIV">
+                <a href="index.html"><img src="../../images/rockeyburgers01-logo.png" alt="Rockey Burger Logo"></a>
+            </div>
+           <div class="navbox">
+               <button class="btn active"><a href="index.html">Home</a></button>
+                <button class="btn"><a href="menu.html">Menu</a></button>
+                <button class="btn"><a href="contact.html">Contact</a></button>
+           </div>
+    </div>
+    <div class="burgerimg">
+    </div>
+    <div class="main">
+        <div class="left">
+            <div class="aboutus"> <h2> About us</h2>
                 <p>Spicy jalapeno bacon ipsum dolor amet andouille nulla in, turkey enim eu voluptate. Pork chop aute ground round ullamco nisi ut. Jowl in meatloaf, et reprehenderit culpa sed ut. Quis lorem eiusmod, pork belly culpa ham ad excepteur ut pork loin laborum adipisicing aliquip. Prosciutto tail deserunt meatloaf duis landjaeger. Venison voluptate bacon picanha ball tip dolor capicola. Short loin cupidatat occaecat chicken prosciutto corned beef tail strip steak spare ribs esse exercitation ad ut lorem.</p>
                 <p>Exercitation excepteur duis eiusmod aute tri-tip ham hock eu pork loin officia incididunt. Deserunt reprehenderit sausage, hamburger shank ullamco esse tail quis ut adipisicing turkey elit short loin buffalo. Chuck doner beef ribs pork chop sint commodo aliquip dolore reprehenderit filet mignon minim id enim bresaola. Picanha tongue minim bacon lorem est shankle swine bresaola sed buffalo nisi sint in. Quis laborum nulla ea. Chicken aliquip consectetur, exercitation dolor kevin capicola eiusmod lorem. Fugiat shankle flank biltong.</p>
+                <p>Spicy jalapeno bacon ipsum dolor amet andouille nulla in, turkey enim eu voluptate. Pork chop aute ground round ullamco nisi ut. Jowl in meatloaf, et reprehenderit culpa sed ut. Quis lorem eiusmod, pork belly culpa ham ad excepteur ut pork loin laborum adipisicing aliquip. Prosciutto tail deserunt meatloaf duis landjaeger. Venison voluptate bacon picanha ball tip dolor capicola. Short loin cupidatat occaecat chicken prosciutto corned beef tail strip steak spare ribs esse exercitation ad ut lorem.</p>
+                <p>Exercitation excepteur duis eiusmod aute tri-tip ham hock eu pork loin officia incididunt. Deserunt reprehenderit sausage, hamburger shank ullamco esse tail quis ut adipisicing turkey elit short loin buffalo. Chuck doner beef ribs pork chop sint commodo aliquip dolore reprehenderit filet mignon minim id enim bresaola. Picanha tongue minim bacon lorem est shankle swine bresaola sed buffalo nisi sint in. Quis laborum nulla ea. Chicken aliquip consectetur, exercitation dolor kevin capicola eiusmod lorem. Fugiat shankle flank biltong.</p>
+                <p>Spicy jalapeno bacon ipsum dolor amet andouille nulla in, turkey enim eu voluptate. Pork chop aute ground round ullamco nisi ut. Jowl in meatloaf, et reprehenderit culpa sed ut. Quis lorem eiusmod, pork belly culpa ham ad excepteur ut pork loin laborum adipisicing aliquip. Prosciutto tail deserunt meatloaf duis landjaeger. Venison voluptate bacon picanha ball tip dolor capicola. Short loin cupidatat occaecat chicken prosciutto corned beef tail strip steak spare ribs esse exercitation ad ut lorem.</p>
+                <p>Exercitation excepteur duis eiusmod aute tri-tip ham hock eu pork loin officia incididunt. Deserunt reprehenderit sausage, hamburger shank ullamco esse tail quis ut adipisicing turkey elit short loin buffalo. Chuck doner beef ribs pork chop sint commodo aliquip dolore reprehenderit filet mignon minim id enim bresaola. Picanha tongue minim bacon lorem est shankle swine bresaola sed buffalo nisi sint in. Quis laborum nulla ea. Chicken aliquip consectetur, exercitation dolor kevin capicola eiusmod lorem. Fugiat shankle flank biltong.</p>
+            </div>
+            <div class="reasons">
                 <h2> Reasons You'll Like us</h2>
                     <ul>
                         <li>Never Frozen</li>
@@ -38,48 +44,57 @@
                     </ul>
                 <p>Short ribs tail consequat lorem duis elit irure ullamco deserunt cupim tongue chuck tri-tip venison. Dolore turkey pork belly exercitation drumstick, pork loin excepteur velit lorem leberkas fatback laboris frankfurter. Consectetur ribeye irure pancetta flank. Consectetur capicola t-bone turkey voluptate in spare ribs in nulla cow. Capicola anim short loin sirloin. In dolore tail irure sunt eu occaecat, tempor velit. Eu corned beef turducken fatback laboris nulla lorem prosciutto sirloin in consectetur flank ea biltong ham.</p>
                 <p>Do ground round in magna capicola drumstick tongue spare ribs shankle picanha pork incididunt. Prosciutto adipisicing consectetur, laborum meatloaf cupim pork shankle alcatra. Est ball tip corned beef, exercitation ham jerky dolore. Chicken doner burgdoggen excepteur, boudin rump exercitation aute. Lorem dolore in chuck kevin cow pork chop ut meatloaf occaecat tempor picanha quis. Ham hock qui ea ham tail, dolor in voluptate eiusmod enim ball tip nisi. Biltong landjaeger quis ground round exercitation short loin velit corned beef cupim sausage tail commodo fatback proident officia.</p>
+        </div>
+        </div>
+        <div class="right">
+            <div class="video">
+                <iframe src="https://www.youtube.com/embed/lz0IT4Uk2xQ" frameborder="0"
+                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
-            <div class="right">
-                <div class="video">
-                    <iframe width="350" height="250" src="https://www.youtube.com/embed/lz0IT4Uk2xQ" frameborder="0"
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
-                <div class="testimonials">
-                    <h3>Testimonials</h3>
-                    <h4>Dont Just Trust us, Here's what others say about us!</h4>
-                    <p>Jenny</p>
-                        <ul>
-                            <li>Greatest place i've ever eaten</li>
-                        </ul>
-                    <p>Bobby</p>
-                        <ul>
-                            <li>Amazzzzzzzing Burgers, and even better their staff!!!</li>
-                        </ul>
-                    <p>Tommy</p>
-                        <ul>
-                            <li>I just wish there was one in my backyard! I would be there every day for lunch and
-                                dinner!</li>
-                        </ul>
-                    <p>Jenny</p>
-                    <ul>
-                        <li>Greatest place i've ever eaten</li>
-                    </ul>
-                    <p>Bobby</p>
-                    <ul>
-                        <li>Amazzzzzzzing Burgers, and even better their staff!!!</li>
-                    </ul>
-                    <p>Tommy</p>
-                    <ul>
-                        <li>I just wish there was one in my backyard! I would be there every day for lunch and
-                            dinner!</li>
+            <div class="testimonials">
+                <h2>Testimonials</h2>
+                <h4>Dont Just Trust us, Here's what others say about us!</h4>
+                <div class="testimonyList">
+                    <ul class="mainList">
+                        <li>Jenny
+                            <ul>
+                                <li>"Greatest place I've ever eaten!!"</li>
+                            </ul>
+                        </li>
+                        <li>Bobby
+                            <ul>
+                                <li>"I wish there was one in my backyard! Its that good!"</li>
+                            </ul>
+                        </li>
+                        <li>Timmy
+                            <ul>
+                                <li>"I would eat here every day!"</li>
+                            </ul>
+                        </li>
+                        <li>Jenny
+                            <ul>
+                                <li>"Greatest place I've ever eaten!!"</li>
+                            </ul>
+                        </li>
+                        <li>Bobby
+                            <ul>
+                                <li>"I wish there was one in my backyard! Its that good!"</li>
+                            </ul>
+                        </li>
+                        <li>Timmy
+                            <ul>
+                                <li>"I would eat here every day!"</li>
+                            </ul>
+                        </li>
                     </ul>
                 </div>
             </div>
         </div>
-    </body>
-    <footer>
-       <a href="#"><i id="instagram" class="fab fa-instagram"></i></a>
-        <a href="#"><i id="facebook" class="fab fa-facebook"></i></a>
-        <a href="#"><i id="twitter" class="fab fa-twitter"></i></a>
-    </footer>
+    </div>
+</body>
+<footer>
+   <a href="#"><i id="instagram" class="fab fa-instagram"></i></a>
+    <a href="#"><i id="facebook" class="fab fa-facebook"></i></a>
+    <a href="#"><i id="twitter" class="fab fa-twitter"></i></a>
+</footer>
 </html>
