--- a/pages/html/index.html
+++ b/pages/html/index.html
@@ -15,9 +15,9 @@
                 <a href="index.html"><img src="../../images/rockeyburgers01-logo.png" alt="Rockey Burger Logo"></a>
             </div>
            <div class="navbox">
-               <button class="btn active"><a href="index.html">Home</a></button>
-                <button class="btn"><a href="menu.html">Menu</a></button>
-                <button class="btn"><a href="contact.html">Contact</a></button>
+               <a href="index.html"><button class="btn active">Home</button></a>
+               <a href="menu.html"><button class="btn">Menu</button></a>
+               <a href="contact.html"><button class="btn">Contact</button></a>
            </div>
     </div>
     <div class="burgerimg">
